<resources>
    <string name="app_name">EasyInventory</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_add_product">Add a product</string>
    <string name="title_activity_product">View Product</string>
    <string name="title_activity_edit_product">Edit product</string>
    <string name="title_activity_orders">Order History</string>
    <string name="title_activity_order_in">Buy</string>
    <string name="title_activity_order_out">Sell</string>
    <string name="orders">Orders</string>

    <string name="product_name">Name</string>
    <string name="product_description">Description</string>
    <string name="product_category">Category</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_unit">Unit</string>

    <string name="order_year">Year</string>
    <string name="order_month">Month</string>
    <string name="order_day">Day</string>
    <string name="order_in_quantity_request">Please set the quantity ordered</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Ok</string>

    <string name="btn_create_product">Create Product</string>
    <string name="btn_edit_product">Edit Product</string>
    <string name="currency">CAD$</string>

    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
