<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"

    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/order_in_quantity_request"
        android:textColor="#333"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_ordered_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel_add"
            android:layout_width="@dimen/btn_message_width"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccentLight"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/button_continue_add"
            android:layout_width="@dimen/btn_message_width"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_continue"
            android:textColor="@color/colorAccentLight"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

</LinearLayout>