<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_product_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_product_default" />

    <LinearLayout
        android:id="@+id/view_product_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_product_img" >


        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_product_margin"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="40sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="80dp"
                android:layout_gravity="start"
                android:layout_margin="@dimen/text_product_margin"
                android:textAlignment="center"
                android:text="@string/product_description"
                android:textSize="20sp" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_title_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:layout_margin="@dimen/text_product_margin"
                android:gravity="start"
                android:text="@string/product_category"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_product_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:layout_margin="@dimen/text_product_margin"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="30sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_product_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_title_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:layout_marginEnd="@dimen/text_product_margin"
                android:gravity="start"
                android:text="@string/product_price"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_product_margin"
                android:gravity="start"
                android:text="@string/currency"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="0"
                android:textAlignment="viewStart"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_product_margin"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_title_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:layout_marginEnd="@dimen/text_product_margin"
                android:gravity="start"
                android:text="@string/product_quantity"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_product_margin"
                android:gravity="start"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_product_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:layout_marginStart="@dimen/text_product_margin"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_edit_product"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_product_margin"
            android:layout_gravity="center"
            android:paddingStart="@dimen/btn_horizontal_padding"
            android:paddingEnd="@dimen/btn_horizontal_padding"
            android:paddingTop="@dimen/btn_vertical_padding"
            android:paddingBottom="@dimen/btn_vertical_padding"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/colorAccentLight"
            android:text="@string/btn_edit_product"
            android:enabled="true"
            android:onClick="onClickEditProduct" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
