<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.ei.presentation.inventory.AddProductActivity" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:columnCount="1"
        android:rowCount="5" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:columnCount="2"
            android:rowCount="1" >

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:scaleType="centerCrop"
                android:onClick="onClickPicture" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="@dimen/title_padding_vertical"
                    android:paddingBottom="@dimen/title_padding_vertical">

                    <TextView
                        android:id="@+id/text_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/input_title_margin"
                        android:text="@string/product_name"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/edit_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="196dp"
                        android:textSize="@dimen/input_text_size"
                        android:enabled="true"
                        android:inputType="textNoSuggestions"
                        android:maxLength="@integer/edit_product_name_max" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/title_padding_vertical"
                    android:paddingBottom="@dimen/title_padding_vertical" >

                    <TextView
                        android:id="@+id/text_product_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/input_title_margin"
                        android:text="@string/product_category"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/edit_product_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="170dp"
                        android:maxWidth="250dp"
                        android:textSize="@dimen/input_text_size"
                        android:enabled="true"
                        android:inputType="text"
                        android:maxLength="@integer/edit_product_category_max" />

                </LinearLayout>
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/title_padding_vertical"
            android:paddingBottom="@dimen/title_padding_vertical" >

            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:text="@string/product_price"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/text_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:maxWidth="100dp"
                android:textSize="@dimen/input_text_size"
                android:enabled="true"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/text_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_title_margin"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:text="@string/product_quantity"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:maxWidth="100dp"
                android:enabled="true"
                android:inputType="number"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/text_product_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_title_margin"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:text="@string/product_unit"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_product_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:enabled="true"
                android:inputType="text"
                android:textSize="@dimen/input_text_size"
                android:maxLength="@integer/edit_product_unit_max" />

        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/title_padding_vertical"
            android:paddingBottom="@dimen/title_padding_vertical" >

            <TextView
                android:id="@+id/text_product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:text="@string/product_description"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textMultiLine"
                android:textSize="@dimen/input_text_size"
                android:maxLength="@integer/edit_product_description_max" />

        </LinearLayout>

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/title_padding_vertical"
        android:paddingBottom="@dimen/title_padding_vertical" >

        <Button
            android:id="@+id/button_create_product"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingStart="@dimen/btn_horizontal_padding"
            android:paddingEnd="@dimen/btn_horizontal_padding"
            android:paddingTop="@dimen/btn_vertical_padding"
            android:paddingBottom="@dimen/btn_vertical_padding"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/colorAccentLight"
            android:text="@string/btn_create_product"
            android:enabled="true"
            android:onClick="onClickBtnCreateProduct" />

    </RelativeLayout>

</LinearLayout>