<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp3350.ei.presentation.orders.OrderInActivity" >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start"
        android:paddingTop="@dimen/title_padding_vertical"
        android:paddingBottom="@dimen/title_padding_vertical" >
        <TextView
            android:id="@+id/order_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="StoreId"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/change_orderStore"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/input_title_margin"
            android:enabled="true"
            android:inputType="number"
            android:textSize="@dimen/input_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="start"
        android:paddingTop="@dimen/title_padding_vertical"
        android:paddingBottom="@dimen/title_padding_vertical" >

        <TextView
            android:id="@+id/order_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/order_year"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/change_year"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/input_title_margin"
            android:enabled="true"
            android:inputType="number"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/order_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/order_month"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/change_month"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/input_title_margin"
            android:enabled="true"
            android:inputType="number"
            android:maxWidth="100dp"
            android:minWidth="80dp"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/order_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/order_day"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/change_day"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="number"
            android:maxWidth="100dp"
            android:minWidth="70dp"
            android:textSize="@dimen/input_text_size" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_products"
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:overScrollMode="never" />

</LinearLayout>