<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="start"
            android:paddingTop="@dimen/title_padding_vertical"
            android:paddingBottom="@dimen/title_padding_vertical" >

            <TextView
                android:id="@+id/order_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/order_year"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/change_year"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:enabled="true"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/order_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/order_month"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/change_month"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_title_margin"
                android:enabled="true"
                android:inputType="number"
                android:maxWidth="100dp"
                android:maxLength="2"
                android:minWidth="80dp"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/order_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/order_day"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/change_day"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="number"
                android:maxWidth="100dp"
                android:maxLength="2"
                android:minWidth="70dp"
                android:textSize="@dimen/input_text_size" />
        </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:overScrollMode="never" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_add_items"
            android:layout_width="@dimen/btn_circle_layout_width"
            android:layout_height="@dimen/btn_circle_layout_height"
            android:layout_gravity="start"
            android:layout_margin="@dimen/btn_circle_layout_margin"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="236dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_add_order"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/btn_circle"
            android:foreground="@drawable/btn_small_plus"
            android:gravity="center_vertical|start"
            android:onClick="onClickBtnAddItem" />

        <Button
            android:id="@+id/button_add_order"
            android:layout_width="@dimen/btn_circle_layout_width"
            android:layout_height="@dimen/btn_circle_layout_height"
            android:layout_gravity="end"
            android:layout_margin="@dimen/btn_circle_layout_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_add_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:background="@drawable/btn_circle"
            android:foreground="@drawable/btn_right"
            android:gravity="center_vertical|end"
            android:onClick="onClickBtnAddOrder" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>